# apihop

./: .gitignore  CLAUDE.md  LICENSE  README.md  cliff.toml
.github/workflows/: release.yml
crates/core/: Cargo.toml
crates/core/migrations/postgres/: 001_initial_schema.sql  003_extraction_rules.sql  004_auth_tables.sql  005_connections.sql  006_workspaces.sql
crates/core/migrations/sqlite/: 001_initial_schema.sql  002_graphql_fields.sql  004_auth_tables.sql  006_workspaces.sql
crates/core/src/: auth.rs  crypto.rs  extraction.rs  graphql.rs  import_export.rs  lib.rs  pipeline.rs  proxy.rs  websocket.rs
crates/core/src/models/: mod.rs
crates/core/src/scripting/: console.rs  engine.rs  mod.rs  pm_api.rs
crates/core/src/storage/: common.rs  impl_backend.rs  migrator.rs  mod.rs  postgres.rs  sqlite.rs
crates/desktop/: Cargo.toml  build.rs  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/icons/: icon.icns
crates/desktop/src/: lib.rs  main.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  config.rs  error.rs  main.rs  state.rs
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: App.vue  main.ts
ui/src/api/: client.ts  types.ts
ui/src/assets/: global.css
ui/src/components/: AuthEditor.vue  BaseDialog.vue  BodyEditor.vue  CodeEditor.vue  CollectionAuthDialog.vue  ConfirmDialog.vue  ConnectionsManager.vue  CreateWorkspaceDialog.vue  EnvironmentSelector.vue  ExtractionRulesEditor.vue  GraphQLFieldRow.vue  GraphQLPanel.vue  GraphQLQueryBuilder.vue  GraphQLSchemaExplorer.vue  ImportDialog.vue  KeyValueTable.vue  LoginPage.vue  ManageEnvironments.vue  RequestBuilder.vue  ResponsePanel.vue  ScriptEditor.vue  SettingsDialog.vue  ShortcutsDialog.vue  TabBar.vue  ToastContainer.vue  UrlBar.vue  (+6 more)
(+35 files in other folders)
