[package]
name = "apihop-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "net", "macros"] }
tracing = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.9"
hex = "0.4"
base64 = "0.22"
urlencoding = "2"
serde_yaml = "0.9"
async-recursion = "1"
rquickjs = { version = "0.9", features = ["bindgen", "parallel"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
http = "1"
serde_json_path = "0.7"
argon2 = "0.5"
jsonwebtoken = "9"
sha2 = "0.10"

[dev-dependencies]
wiremock = "0.6"

[features]
default = []
postgres = ["sqlx/postgres"]
