[package]
name = "apihop-desktop"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
apihop-core = { path = "../core" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.9"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = "3.6.3"
hex = "0.4.3"
reqwest = { version = "0.12", features = ["json"] }

[lib]
name = "apihop_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]
